--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
       DB_NAME: ecommerceconfig_db
       DB_USER: postgres
       DB_PASSWORD: postgres
-      DB_HOST: postgres
+      DB_HOST: localhost
       DB_PORT: 5432
       CELERY_BROKER_HOST: rabbitmq
       CELERY_BROKER_PORT: 5672
@@ -62,7 +62,7 @@ jobs:
 
       - name: Wait for Postgres
         run: |
-          until pg_isready -h postgres -p 5432; do
+          until pg_isready -h localhost -p 5432; do
             echo "Waiting for postgres..."
             sleep 2
           done
