--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ colorama==0.4.6
 cron_descriptor==2.0.6
 Django==5.2.11
 django-celery-beat==2.8.1
+django-ratelimit==4.1.0
 django-timezone-field==7.2.1
 django_celery_results==2.6.0
 djangorestframework==3.16.1
