--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,7 @@ jobs:
       DB_PORT: 5432
       CELERY_BROKER_HOST: rabbitmq
       CELERY_BROKER_PORT: 5672
+      CACHE_BACKEND: django.core.cache.backends.dummy.DummyCache
 
     steps:
       - name: Checkout code
