--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,11 @@ jobs:
         image: rabbitmq:3-management
         ports:
           - 5672:5672
+      
+      redis:
+        image: redis:7
+        ports:
+          - 6379:6379
 
     env:
       DEBUG: True
@@ -41,6 +46,9 @@ jobs:
       CELERY_BROKER_HOST: rabbitmq
       CELERY_BROKER_PORT: 5672
       RATELIMIT_ENABLE: False
+      CACHE_BACKEND: django.core.cache.backends.redis.RedisCache
+      REDIS_URL: redis://localhost:6379/1
+
 
     steps:
       - name: Checkout code
